<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/errorCode300"
        layout="@layout/error_code_300"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:hint="@string/enter_your_username"
        android:background="@android:color/transparent"
        android:padding="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login"/>

    <EditText
        android:id="@+id/login"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:hint="@string/enter_your_login"
        android:background="@android:color/transparent"
        android:padding="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintBottom_toTopOf="@id/password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:hint="@string/enter_the_password"
        android:background="@android:color/transparent"
        android:padding="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintBottom_toTopOf="@id/confirmationPassword"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/confirmationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/confirm_the_password"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:padding="@dimen/_8dp"
        app:layout_constraintBottom_toTopOf="@id/textImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/adding_a_picture_or_photo"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/confirmationPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/sign_up"
        android:layout_marginTop="200dp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pickPhoto"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/pick_photo"
        android:padding="0dp"
        app:icon="@drawable/ic_pick_photo_24"
        app:iconSize="65dp"
        app:layout_constraintTop_toBottomOf="@id/textImage"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/takePhoto"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/take_photo"
        android:padding="0dp"
        app:icon="@drawable/ic_take_photo_24"
        app:iconSize="65dp"
        app:layout_constraintStart_toEndOf="@id/pickPhoto"
        app:layout_constraintTop_toBottomOf="@id/textImage"/>

    <ImageView
        android:id="@+id/avatarImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:contentDescription="@string/avatar_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textImage" />

    <TextView
        android:id="@+id/textAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/your_avatar"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="@dimen/common_spacing"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/takePhoto"
        app:layout_constraintEnd_toStartOf="@id/avatarImage"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="avatarImage, textAvatar" />


</androidx.constraintlayout.widget.ConstraintLayout>