<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <EditText-->
<!--        android:id="@+id/content"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginTop="@dimen/common_spacing"-->
<!--        android:background="@android:color/transparent"-->
<!--        android:gravity="top"-->
<!--        android:hint="@string/post_text"-->
<!--        android:padding="@dimen/_8dp" />-->

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        tools:ignore="BottomAppBar,MissingConstraints" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/ok"
        android:layout_margin="@dimen/common_spacing"
        app:srcCompat="@drawable/ic_add_24"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/messageHint"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:text="@string/edit_message"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/cancelEdit"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toEndOf="@id/edit"
        app:layout_constraintTop_toBottomOf="@+id/barrier" />

    <TextView
        android:id="@+id/cancelEdit"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toStartOf="@id/cancel"
        app:layout_constraintStart_toEndOf="@id/edit"
        app:layout_constraintTop_toBottomOf="@+id/messageHint" />

    <ImageView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancelEdit"
        app:srcCompat="@drawable/ic_edit_24"/>

    <ImageButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_cancel_24" />

    <EditText
        android:id="@+id/content"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:padding="@dimen/_8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="cancelEdit,edit,cancel,messageHint" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="content,cancelEdit,edit,cancel"/>

</androidx.constraintlayout.widget.ConstraintLayout>