<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newPost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewPostFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/exitConfirmationDialogBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:layoutManager="androidx.cardview.widget.CardView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/photoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/content"
                tools:src="@tools:sample/avatars[12]" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/removePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                app:layout_constraintBottom_toBottomOf="@id/photo"
                app:layout_constraintEnd_toEndOf="@id/photo"
                app:layout_constraintStart_toStartOf="@id/photo" />

            <TextView
                android:id="@+id/messageHint"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                android:text="@string/edit_message"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/cancelEdit"
                app:layout_constraintEnd_toStartOf="@id/cancel"
                app:layout_constraintStart_toEndOf="@id/edit"
                app:layout_constraintTop_toBottomOf="@+id/barrier" />

            <TextView
                android:id="@+id/cancelEdit"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginEnd="@dimen/common_spacing"
                app:layout_constraintBottom_toTopOf="@id/content"
                app:layout_constraintEnd_toStartOf="@id/cancel"
                app:layout_constraintStart_toEndOf="@id/edit"
                app:layout_constraintTop_toBottomOf="@+id/messageHint" />

            <ImageView
                android:id="@+id/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit"
                app:layout_constraintBottom_toTopOf="@id/content"
                app:layout_constraintEnd_toStartOf="@id/cancelEdit"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_edit_24" />

            <ImageButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cancel"
                app:layout_constraintBottom_toTopOf="@id/content"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_cancel_24" />

            <EditText
                android:id="@+id/content"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ellipsize="end"
                android:hint="@string/post_text"
                android:inputType="textMultiLine"
                android:maxLines="9"
                android:padding="@dimen/_8dp"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toTopOf="@+id/photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@tools:sample/lorem[]" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="cancelEdit,edit,cancel,messageHint" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/groupPhotoContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="photo, removePhoto" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:barrierDirection="top"
                app:constraint_referenced_ids="content,cancelEdit,edit,cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/ok"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="@dimen/common_spacing"-->
<!--        android:contentDescription="@string/ok"-->
<!--        app:layout_constraintBottom_toTopOf="@id/buttonPanel"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:srcCompat="@drawable/ic_add_24"-->
<!--        tools:ignore="MissingConstraints" />-->

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/pickPhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/pick_photo"
            android:padding="0dp"
            app:icon="@drawable/ic_pick_photo_24"
            app:iconSize="48dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/takePhoto"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/take_photo"
            android:padding="0dp"
            app:icon="@drawable/ic_take_photo_24"
            app:iconSize="48dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>